--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "@ai-sdk/openai": "^2.0.80",
     "@ai-sdk/react": "^2.0.109",
+    "@clerk/localizations": "^3.30.1",
+    "@clerk/nextjs": "^6.36.2",
     "@radix-ui/react-avatar": "^1.1.11",
     "@radix-ui/react-slot": "^1.2.4",
     "ai": "^5.0.108",
