--- a/package.json
+++ b/package.json
@@ -32,15 +32,16 @@
   },
   "devDependencies": {
     "@prisma/client": "^6.19.0",
-    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.22",
     "dotenv": "^17.2.3",
     "eslint": "^9",
     "eslint-config-next": "16.0.8",
+    "postcss": "^8.5.6",
     "prisma": "^6.19.0",
-    "tailwindcss": "^4",
+    "tailwindcss": "^3.4.17",
     "ts-node": "^10.9.2",
     "tsx": "^4.21.0",
     "tw-animate-css": "^1.4.0",
