--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "openai": "^6.10.0",
     "react": "19.2.1",
     "react-dom": "19.2.1",
+    "react-hot-toast": "^2.6.0",
     "recharts": "^3.5.1",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
