--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@clerk/localizations": "^3.30.1",
     "@clerk/nextjs": "^6.36.2",
     "@radix-ui/react-avatar": "^1.1.11",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-slot": "^1.2.4",
     "ai": "^5.0.108",
     "class-variance-authority": "^0.7.1",
