--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-tabs": "^1.1.13",
+    "@react-email/components": "^1.0.1",
+    "@react-email/render": "^2.0.0",
     "@supabase/supabase-js": "^2.87.1",
     "ai": "^5.0.108",
     "class-variance-authority": "^0.7.1",
@@ -34,6 +36,7 @@
     "react-dom": "19.2.1",
     "react-hot-toast": "^2.6.0",
     "recharts": "^3.5.1",
+    "resend": "^6.6.0",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^4.1.13"
