--- a/package.json
+++ b/package.json
@@ -32,9 +32,11 @@
     "lucide-react": "^0.556.0",
     "next": "16.0.8",
     "openai": "^6.10.0",
+    "plaid": "^40.0.0",
     "react": "19.2.1",
     "react-dom": "19.2.1",
     "react-hot-toast": "^2.6.0",
+    "react-plaid-link": "^4.1.1",
     "recharts": "^3.5.1",
     "resend": "^6.6.0",
     "tailwind-merge": "^3.4.0",
