--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "lucide-react": "^0.556.0",
     "next": "16.0.8",
     "openai": "^6.10.0",
-    "pdf-parse": "^2.4.5",
+    "pdf2json": "^4.0.0",
     "plaid": "^40.0.0",
     "react": "19.2.1",
     "react-dom": "19.2.1",
