fix: Amélioration import CSV pour gérer fichiers volumineux
- Augmentation limite CSV: 20KB -> 100KB
- Augmentation max_tokens OpenAI: 4000 -> 16000
- Prompt amélioré pour insister sur extraction de TOUTES les transactions
- Meilleure gestion JSON tronqué avec stratégies de récupération
- Support fichiers jusqu'à 320+ transactions

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@react-email/components": "^1.0.1",
     "@react-email/render": "^2.0.0",
     "@supabase/supabase-js": "^2.87.1",
+    "@types/papaparse": "^5.5.2",
     "ai": "^5.0.108",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -32,6 +33,7 @@
     "lucide-react": "^0.556.0",
     "next": "16.0.8",
     "openai": "^6.10.0",
+    "papaparse": "^5.5.3",
     "pdf2json": "^4.0.0",
     "plaid": "^40.0.0",
     "react": "19.2.1",
