--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@ai-sdk/react": "^2.0.109",
     "@clerk/localizations": "^3.30.1",
     "@clerk/nextjs": "^6.36.2",
+    "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-avatar": "^1.1.11",
+    "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.8",
@@ -25,6 +27,7 @@
     "@react-email/components": "^1.0.1",
     "@react-email/render": "^2.0.0",
     "@supabase/supabase-js": "^2.87.1",
+    "@tanstack/react-table": "^8.21.3",
     "@types/papaparse": "^5.5.2",
     "ai": "^5.0.108",
     "class-variance-authority": "^0.7.1",
