--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,11 @@ next-env.d.ts
 
 /app/generated/prisma
 .env.local
+
+# PWA generated files
+/public/sw.js
+/public/workbox-*.js
+/public/sw.js.map
+/public/workbox-*.js.map
+/public/fallback-*.js
+/public/fallback-*.js.map
