--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@ai-sdk/react": "^2.0.109",
     "@clerk/localizations": "^3.30.1",
     "@clerk/nextjs": "^6.36.2",
+    "@ducanh2912/next-pwa": "^10.2.9",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-avatar": "^1.1.11",
     "@radix-ui/react-checkbox": "^1.3.3",
