--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "pdf2json": "^4.0.0",
     "plaid": "^40.0.0",
     "react": "19.2.1",
+    "react-circular-progressbar": "^2.2.0",
     "react-dom": "19.2.1",
     "react-hot-toast": "^2.6.0",
     "react-plaid-link": "^4.1.1",
