feat: Système complet de gestion de documents avec extraction IA
- Schema Prisma: modèle Document avec relations User/Client
- Server Action uploadAndAnalyzeDocument:
  * Upload vers Supabase Storage (bucket 'documents')
  * Extraction PDF avec pdf-parse
  * Extraction Image avec GPT-4o Vision
  * Génération résumé IA automatique
- Intégration chatbot: outil searchDocuments pour RAG
- Interface documents:
  * Drag & drop pour upload
  * Sélection client optionnelle
  * Grille de cartes avec badges type/client
  * Actions voir/supprimer
- Navigation: ajout lien Documents dans Sidebar/MobileNav
- Extraction texte stockée pour recherche sémantique

--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "next": "16.0.8",
     "openai": "^6.10.0",
     "papaparse": "^5.5.3",
+    "pdf-parse": "^2.4.5",
     "pdf2json": "^4.0.0",
     "plaid": "^40.0.0",
     "react": "19.2.1",
