--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.8",
+    "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slider": "^1.3.6",
     "@radix-ui/react-slot": "^1.2.4",
@@ -48,6 +49,7 @@
     "plaid": "^40.0.0",
     "react": "19.2.1",
     "react-circular-progressbar": "^2.2.0",
+    "react-day-picker": "^9.13.0",
     "react-dom": "19.2.1",
     "react-hot-toast": "^2.6.0",
     "react-plaid-link": "^4.1.1",
